--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "@jsonforms/examples": "^2.4.0",
     "@jsonforms/material-renderers": "^2.4.0",
     "@jsonforms/react": "^2.4.0",
@@ -14,17 +16,25 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@trendmicro/react-sidenav": "^0.5.0",
+    "@version/react-router-v3": "^1.0.0",
     "axios": "^0.19.2",
+    "classnames": "^2.2.6",
+    "clsx": "^1.1.1",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "jwt-auth-react": "^4.1.2",
     "material-ui": "^0.20.2",
     "material-ui-icons": "^1.0.0-beta.36",
+    "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-date-picker": "^8.0.1",
     "react-dom": "^16.13.1",
     "react-dropzone": "^11.0.2",
     "react-dropzone-component": "^3.2.0",
+    "react-flags-select": "^1.1.13",
     "react-hook-form": "^6.0.0",
     "react-i18next": "^11.7.0",
     "react-input-validation-hook": "^1.0.1",
@@ -34,8 +44,13 @@
     "react-phone-input-2": "^2.13.7",
     "react-phone-number-input": "^3.0.24",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "react-sidebar": "^3.0.2",
+    "react-sidebar-styled": "0.0.1",
+    "react-sidebar-ui": "^1.2.0",
+    "react-styled-sidebar": "0.0.3",
     "react-window": "^1.8.5",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
@@ -62,5 +77,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.10.4"
   }
 }
