--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "react-input-validation-hook": "^1.0.1",
     "react-json-to-form": "^1.2.8",
     "react-listbox": "^1.2.13",
+    "react-loader-spinner": "^3.1.14",
     "react-notifications": "^1.6.0",
     "react-phone-input-2": "^2.13.7",
     "react-phone-number-input": "^3.0.24",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "react-sidebar": "^3.0.2",
     "react-sidebar-styled": "0.0.1",
     "react-sidebar-ui": "^1.2.0",
