--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "react-sidebar-styled": "0.0.1",
     "react-sidebar-ui": "^1.2.0",
     "react-styled-sidebar": "0.0.3",
+    "react-toasts": "^3.0.6",
     "react-window": "^1.8.5",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
