--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@testing-library/user-event": "^7.1.2",
     "@trendmicro/react-sidenav": "^0.5.0",
     "@version/react-router-v3": "^1.0.0",
+    "actions": "^1.3.0",
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
@@ -42,6 +43,7 @@
     "react-listbox": "^1.2.13",
     "react-loader-spinner": "^3.1.14",
     "react-notifications": "^1.6.0",
+    "react-notifications-component": "^2.4.0",
     "react-phone-input-2": "^2.13.7",
     "react-phone-number-input": "^3.0.24",
     "react-redux": "^7.2.0",
@@ -52,6 +54,7 @@
     "react-sidebar-styled": "0.0.1",
     "react-sidebar-ui": "^1.2.0",
     "react-styled-sidebar": "0.0.3",
+    "react-toastify": "^6.0.8",
     "react-toasts": "^3.0.6",
     "react-window": "^1.8.5",
     "reactstrap": "^8.5.1",
