--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^0.19.2",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
+    "email-regex": "^4.0.0",
     "i18next": "^19.6.3",
     "i18next-browser-languagedetector": "^5.0.0",
     "jwt-auth-react": "^4.1.2",
@@ -84,6 +85,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.10.4"
+    "@babel/plugin-transform-react-jsx": "^7.10.4",
+    "react-email-autocomplete": "^1.3.4"
   }
 }
